# lighter-make

./: CMakeLists.txt  everything.cmake  global-flags-internal.cmake  global-flags.cmake  install-config.cmake
cmake/: AddExternals.cmake  PrecompiledHeader.cmake  application.vcxproj.user-template  lighter-CMakeLists.txt
lighter-ext/cmake/: glew-include.txt
